--- a/trabalhoFoto/trabalhoPg2.css
+++ b/trabalhoFoto/trabalhoPg2.css
@@ -1,3 +1,10 @@
-#camille_cibernetica { 
-color: ;
+#camille { 
+color: gray ;
+}
+table, tr, th , td{ 
+    border: 2px black solid; 
+    padding: 10px;
+}
+table {
+    margin: 0 auto; 
 }
